Adapt mixnet payloads.